stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c: In function 'CircularBuffer_IsFull':
CircularBuffer.c:41:38: error: 'self' undeclared (first use in this function)
   41 |     size_t NumberOfElements = sizeof(self->capacity)/sizeof(self->values[0]);
      |                                      ^~~~
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
